Version 0.9.40dev (?? ??? 2002)
  - Added + icon for adding new events on each hour for week and day views.
  - Fixed bug 598765: Fixed default date setting.
Version 0.9.39 (21 Aug 2002)
  - Fixed bug 597815: Fixed autoset of 'server_url' config setting to
    work when admin.php isn't the first page accessed.
  - Fixed bug 586525: Don't allow users to access views when view other
    users is set to no in admin.
  - Fixed bug 596616: date_to_string was corrupting certain month names
    in other languages.
  - Fixed bug 587795: Could not edit a layer with less than two users
    in the calendar.
  - Changed login page so that "Remember login" is not selected by default.
  - Fixed bug: Was not defaulting login name to last person to login.
  - Fixed bug: Events with no time on weekends where not being displayed
    with the weekend background color in the week view.
  - Include a category of "None" when editing an event.
  - Fixed bug 587909: Don't display 12pm for events with no time in
    notifications.
  - Fixed bug 585939: Don't allow empty view names or group names.
  - Fixed bug: Some users encounter an error when logging in because
    the old session cookie (that contained no path info) was not
    being deleted properly.
  - Fixed bug: send_reminders.php was not checking single user status
    properly.
  - Fixed bug: Error in mailto URL in view_entry.php.
  - Fixed bug: Variable $i was being used for both inner and outer for
    loop in del_entry.php.
  - Fixed bug: When adding/editing an event, if you put a leading '0'
    on the start time (like 09), it always warns you that the event
    starts before your working hours (even if it isn't true).
  - Fixed bug 584826: Fixed custom views (week and month) to display
    weekends in different colors.
  - Fixed bug 583842: categories should not be editable when readonly.
    categories were not showing up when readonly
  - Fixed bug 582950: If user has "none" (browser-defined) language