@@ -8,8 +8,9 @@ CREATE TABLE webcal_user (
   PRIMARY KEY ( cal_login )
 );
 
-INSERT INTO webcal_user ( cal_login, cal_passwd, cal_lastname, cal_firstname,
-cal_is_admin ) VALUES ( 'admin', 'admin', 'Administrator', 'Default', 'Y' );
+INSERT INTO webcal_user 
+	(cal_login, cal_passwd, cal_lastname, cal_firstname, cal_is_admin) 
+	VALUES ( 'admin', 'admin', 'Administrator', 'Default', 'Y' );
 
 
 CREATE TABLE webcal_entry (
@@ -25,7 +26,7 @@ CREATE TABLE webcal_entry (
   cal_type CHAR(1) DEFAULT 'E',
   cal_access CHAR(1) DEFAULT 'P',
   cal_name VARCHAR(80) NOT NULL,
-  cal_description VARCHAR(1024),
+  cal_description varchar(1024),
   PRIMARY KEY ( cal_id )
 );
 
@@ -40,10 +41,19 @@ CREATE TABLE webcal_entry_repeats (
 );
 
 
+CREATE TABLE webcal_entry_repeats_not (
+  cal_id INT NOT NULL,
+  cal_date INT NOT NULL,
+  PRIMARY KEY ( cal_id, cal_date )
+);
+
+
+
 CREATE TABLE webcal_entry_user (
   cal_id int DEFAULT 0 NOT NULL,
   cal_login varchar(25) DEFAULT '' NOT NULL, 
   cal_status char(1) DEFAULT 'A' NOT NULL,
+  cal_category INT DEFAULT NULL,
   PRIMARY KEY ( cal_id,cal_login )
 );
 
@@ -75,7 +85,7 @@ CREATE TABLE webcal_site_extras (
   cal_type INT NOT NULL,
   cal_date INT DEFAULT 0,
   cal_remind INT DEFAULT 0,
-  cal_data VARCHAR(1024),
+  cal_data varchar(1024),
   PRIMARY KEY ( cal_id, cal_name, cal_type )
 );
 
@@ -88,3 +98,137 @@ CREATE TABLE webcal_reminder_log (
   PRIMARY KEY ( cal_id, cal_name, cal_event_date )
 );
 
+CREATE TABLE webcal_group (
+  cal_group_id INT NOT NULL,
+  cal_owner VARCHAR(25),
+  cal_name VARCHAR(50) NOT NULL,
+  cal_last_update INT NOT NULL,
+  PRIMARY KEY ( cal_group_id )
+);
+
+CREATE TABLE webcal_group_user (
+  cal_group_id INT NOT NULL,
+  cal_login VARCHAR(25) NOT NULL,
+  PRIMARY KEY ( cal_group_id, cal_login )
+);
+
+CREATE TABLE webcal_view (
+  cal_view_id INT NOT NULL,
+  cal_owner VARCHAR(25) NOT NULL,
+  cal_name VARCHAR(50) NOT NULL,
+  cal_view_type CHAR(1),
+  PRIMARY KEY ( cal_view_id )
+);
+
+CREATE TABLE webcal_view_user (
+  cal_view_id INT NOT NULL,
+  cal_login VARCHAR(25) NOT NULL,
+  PRIMARY KEY ( cal_view_id, cal_login )
+);
+
+CREATE TABLE webcal_config (
+  cal_setting VARCHAR(50) NOT NULL,
+  cal_value VARCHAR(50),
+  PRIMARY KEY ( cal_setting )
+);
+
+
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'LANGUAGE', 'Browser-defined' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'demo_mode', 'N' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'require_approvals', 'Y' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'groups_enabled', 'N' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'user_sees_only_his_groups', 'N' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'categories_enabled', 'N' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'allow_conflicts', 'N' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'conflict_repeat_months', '6' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'disable_priority_field', 'N' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'disable_access_field', 'N' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'disable_participants_field', 'N' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'disable_repeating_field', 'N' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'allow_view_other', 'Y' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'email_fallback_from', 'youremailhere' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'remember_last_login', 'Y' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'allow_color_customization', 'Y' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'BGCOLOR', '#C0C0C0' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'H2COLOR', '#000000' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'CELLBG', '#C0C0C0' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'WEEKENDBG', '#D0D0D0' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'TABLEBG', '#000000' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'THBG', '#FFFFFF' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'THFG', '#000000' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'POPUP_FG', '#000000' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'POPUP_BG', '#FFFFFF' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'TODAYCELLBG', '#E0E0E0' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'STARTVIEW', 'week' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'WEEK_START', '0' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'TIME_FORMAT', '12' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'DISPLAY_UNAPPROVED', 'Y' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'DISPLAY_WEEKNUMBER', 'Y' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'WORK_DAY_START_HOUR', '8' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'WORK_DAY_END_HOUR', '17' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'send_email', 'N' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'EMAIL_REMINDER', 'Y' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'EMAIL_EVENT_ADDED', 'Y' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'EMAIL_EVENT_UPDATED', 'Y' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'EMAIL_EVENT_DELETED', 'Y' );
+INSERT INTO webcal_config ( cal_setting, cal_value )
+  VALUES ( 'EMAIL_EVENT_REJECTED', 'Y' );
+
+
+CREATE TABLE webcal_entry_log (
+  cal_log_id INT NOT NULL,
+  cal_entry_id INT NOT NULL,
+  cal_login VARCHAR(25) NOT NULL,
+  cal_user_cal VARCHAR(25),
+  cal_type CHAR(1) NOT NULL,
+  cal_date INT NOT NULL,
+  cal_time INT,
+  cal_text varchar(1024),
+  PRIMARY KEY ( cal_log_id )
+);
+
+
+CREATE TABLE webcal_categories (
+  cat_id INT NOT NULL,
+  cat_owner VARCHAR(25),
+  cat_name VARCHAR(80) NOT NULL,
+  PRIMARY KEY ( cat_id )
+);
