@@ -1,4 +1,5 @@
 Version 0.9.40dev (?? ??? 2002)
+  - Updated tables-db2.sql (was out-of-date).
   - Added + icon for adding new events on each hour for week and day views.
   - Fixed bug 598765: Fixed default date setting.
 Version 0.9.39 (21 Aug 2002)
